# balls

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  ball.cpp  ball.h  main.cpp  wall.cpp  wall.h
assets/guis/: menu
assets/maps/: map1  map2
cmake/: addSFML.cmake  compilerWarnings.cmake
src/: ball.h  game.h  main.cpp
src/classes/: Vec2f.h  ball.cpp  ball.h  board.cpp  board.h  button.cpp  button.h  chargeMeter.cpp  chargeMeter.h  chungus.h  event.cpp  event.h  fontLoader.cpp  fontLoader.h  font_loader.cpp  game.cpp  game.h  gui.cpp  gui.h  guiScenarios.cpp  guiScenarios.h  input.cpp  input.h  mapLoader.cpp  mapLoader.h  optionsLoader.cpp  optionsLoader.h  simulation.cpp  simulation.h  slider.cpp  slider.h  ui.cpp  ui.h  utils_2d.cpp  utils_2d.h  wall.cpp  wall.h
src/classes/board/: ball.cpp  ball.h  board.cpp  board.h  chargeMeter.cpp  chargeMeter.h  simulation.cpp  simulation.h  wall.cpp  wall.h
src/classes/gui/: button.cpp  button.h  custom_but.h  entity.h  gui.cpp  gui.h  guiScenarios.cpp  guiScenarios.h  gui_menu.h  layer.cpp  layer.h  slider.cpp  slider.h  widget.h
src/classes/simulation/: ball.cpp  ball.h  board.cpp  board.h  chargeMeter.cpp  charge_meter.cpp  charge_meter.h  simulation.cpp  simulation.h  wall.cpp  wall.h
src/maps/: map1  map2
src/utils/: utils_2d.cpp  utils_2d.h
